--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -446,7 +446,7 @@
                     <h6>Campos UDM (Unified Data Model)</h6>
                     <p>Uno de los aspectos más importantes de Chronicle es su Modelo de Datos Unificado (UDM), que estandariza los datos de seguridad de diferentes fuentes en un formato común. Esto es clave para permitir la correlación entre eventos de seguridad que, de otro modo, estarían en diferentes formatos.</p>
                     <p>UDM es el esquema de datos utilizado por Chronicle para representar eventos de seguridad de manera coherente, independientemente de la fuente original. Este modelo permite a los analistas de seguridad realizar búsquedas y correlacionar eventos de diferentes sistemas, como logs de firewall, EDR, o soluciones de detección de amenazas en la nube.</p>
-                    <p>Campos principales del UDM:</p>
+                    <p>Campos phttps://cloud.google.com/chronicle/docs/reference/important-udm-fieldsrincipales del UDM:</p>
                     <ul>
                         <li><marcador class="resaltado2">Metadata: </marcador>Contiene información clave sobre el evento, como la hora en que ocurrió, la fuente del dato, y el tipo de evento.</li>
                         <li><marcador class="resaltado2">Actor: </marcador>Identifica el origen del evento, como un usuario, una IP o un dispositivo.</li>
@@ -454,6 +454,7 @@
                         <li><marcador class="resaltado2">Event: </marcador>Describe el tipo de actividad o acción registrada, como acceso a un archivo, intento de autenticación o ejecución de un comando.</li>
                         <li><marcador class="resaltado2">Network: </marcador>Contiene información relacionada con las comunicaciones de red, como direcciones IP, puertos, y protocolos utilizados en la interacción.</li>
                     </ul>
+                    <p>Para obtener información sobre los campos UDM (Unified Data Model) en Chronicle, puedes visitar la documentación oficial de <a href="https://cloud.google.com/chronicle/docs/reference/important-udm-fields" target="blank">Google Cloud Chronicle</a>.  Allí encontrarás detalles sobre la estructura de los datos y los campos disponibles.</p>
                     <div class="blog-image-grande">
                         <img src="media/response14.png" alt="">
                     </div> 
