--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -489,7 +489,7 @@ condition:
                         <li><marcador class="resaltado3">Match: </marcador>Esta sección se utiliza para definir qué ocurre cuando la regla coincide con un archivo. No es una parte estándar de Yara, pero puede referirse a cómo se manejan las coincidencias, dependiendo del contexto en que se utilice la regla.</li>
                         <li><marcador class="resaltado3">Outcome: </marcador>Esta sección puede describir el resultado o la acción que se debe tomar cuando hay una coincidencia. Similar a "match", no es una parte estándar, pero puede hacer referencia a la lógica aplicada en herramientas o entornos específicos.</li>
                     </ol>
-                    <p>Ejemplo de regla YARA</p>
+                    <p>Ejemplo de regla YARA:</p>
                     <div class="archivo">
 rule buran_ransomware {
 
