--- a/ia/pytorch.html
+++ b/ia/pytorch.html
@@ -141,6 +141,13 @@ print(tensor)
                     <img src="media/pytorch3.jpg" alt="">
                 </div>
                 <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pytorch/PyTorch.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con PyTorch.</p>
+                <h2>Kaggle</h2>
+                <p>Kaggle es una plataforma en línea que proporciona un espacio para científicos de datos y entusiastas del machine learning donde pueden colaborar, compartir conocimientos, y participar en competencias de análisis de datos. En Kaggle, se pueden encontrar conjuntos de datos abiertos, soluciones a problemas complejos de aprendizaje automático, y herramientas como notebooks, que permiten trabajar directamente desde el navegador con un entorno configurado con Python y R. Además, la comunidad de Kaggle es muy activa, lo que fomenta el intercambio de ideas y el aprendizaje a través de kernels y discusiones.</p>
+                <p>Una de las principales atracciones de Kaggle son las competencias de ciencia de datos, donde las empresas proponen desafíos y los participantes compiten por crear el mejor modelo. También es muy útil para construir portafolios profesionales y ganar visibilidad en el campo de la ciencia de datos. Kaggle ofrece un entorno gratuito con acceso a GPUs y TPUs, facilitando el entrenamiento de modelos complejos sin la necesidad de recursos locales.</p>
+                <p>A continuación, te pasaré un modelo de clasificación de cartas de póker en <a href="https://www.kaggle.com/code/robikscube/train-your-first-pytorch-model-card-classifier" target="blank">Kaggle</a>, donde podrás entrenar y evaluar el desempeño del modelo en este entorno especializado.</p>
+                <div class="blog-image-grande">
+                    <img src="media/pytorch6.jpg" alt="">
+                </div>
                 <h2>Conda</h2>
                 <p>Conda es una herramienta extremadamente útil para gestionar entornos y paquetes, permitiendo trabajar en proyectos de manera aislada sin que las dependencias de diferentes proyectos interfieran entre sí. Para crear un entorno de prueba con PyTorch, primero debes asegurarte de tener Conda instalado en tu sistema. Al crear un entorno virtual, puedes aislar las versiones de Python y las bibliotecas que necesitas para un proyecto específico, lo que evita problemas de compatibilidad entre distintos proyectos. Esto es particularmente útil cuando trabajas en múltiples proyectos que pueden requerir diferentes versiones de PyTorch, TensorFlow u otros paquetes.</p>
                 <p>A continuación te muestro los pasos para crear y activar un entorno en Conda y cómo instalar los paquetes necesarios para deep learning:</p>
