--- a/devops/docker.html
+++ b/devops/docker.html
@@ -7,7 +7,7 @@
     <title>Blog de Tecnología</title>
     <link rel="icon" href="../media/imagen41.png" type="image/png">
     <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/estilos-articulo.css?v=1.1">
+    <link rel="stylesheet" href="../css/estilos-articulo.css">
 </head>
 <body>
 
