--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -62,7 +62,7 @@
                 <h6>Detección de amenazas</h6>
                 <p>La sección de detecciones muestra qué motores han identificado un archivo como malicioso, mientras que los detalles proporcionan información más específica sobre el archivo analizado, como su tipo y metadatos. La sección de relaciones permite ver conexiones entre el archivo y otras amenazas conocidas, ayudando a los analistas a entender el contexto. En la sección de comportamiento, se analizan las acciones realizadas por el archivo en un entorno controlado, lo que revela sus intenciones maliciosas. Finalmente, la comunidad ofrece un espacio donde los usuarios pueden colaborar y compartir información valiosa sobre nuevas amenazas.</p>
                 <p>Para encontrar firmas actualizadas de amenazas conocidas, una fuente confiable es <a href="https://otx.alienvault.com/" target="blank">AlienVault</a>, donde se listan vulnerabilidades y exposiciones comunes, incluyendo información sobre sus respectivas firmas.</p>
-                <p>Otra fuente útil es MalwareBazaar <a href="https://bazaar.abuse.ch/" target="blank">MalwareBazaar</a>, donde se pueden encontrar muestras de malware y sus respectivas firmas, lo que puede ser valioso para la investigación y el análisis de amenazas.</p>
+                <p>Otra fuente útil es <a href="https://bazaar.abuse.ch/" target="blank">MalwareBazaar</a>, donde se pueden encontrar muestras de malware y sus respectivas firmas, lo que puede ser valioso para la investigación y el análisis de amenazas.</p>
                 <div class="blog-image-grande">
                     <img src="media/response1-1.png" alt="">
                 </div> 
