--- a/hacking/deteccion.html
+++ b/hacking/deteccion.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <h3>Configuración de Snort en Windows</h3>
-                <p>Descargar Snort: Descarga el instalador de <a href="https://www.snort.org/" target="blank">https://www.snort.org</a>.</p> 
+                <p>Descargar Snort: Descarga el instalador de <a href="www.snort.org/" target="blank">https://www.snort.org</a>.</p> 
                 <p>Configurar Snort: Al igual que en Linux, el archivo de configuración se llama <marcador class="resaltado1">snort.conf</marcador>, que en Windows se suele ubicar en <marcador class="resaltado1">C:\Snort\etc\snort.conf</marcador></p>
                 <p>Asegúrate de especificar las rutas correctas de las reglas y ajusta la configuración de red.</p>
                 <p>Ubicación de las reglas en Windows: Las reglas de Snort en Windows generalmente se almacenan en <marcador class="resaltado1">C:\Snort\rules\</marcador></p>
