--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -487,8 +487,8 @@ $string2 = { E2 34 A1 }
 condition:
 any of ($string*)
                     </div>
-                    <li><marcador class="resaltado3">Match: </marcador>Esta sección se utiliza para definir qué ocurre cuando la regla coincide con un archivo. No es una parte estándar de Yara, pero puede referirse a cómo se manejan las coincidencias, dependiendo del contexto en que se utilice la regla.</li>
-                    <li><marcador class="resaltado3">Outcome: </marcador>Esta sección puede describir el resultado o la acción que se debe tomar cuando hay una coincidencia. Similar a "match", no es una parte estándar, pero puede hacer referencia a la lógica aplicada en herramientas o entornos específicos.</li>
+                    <li><marcador class="resaltado3">Match: </marcador>Se utiliza para especificar qué eventos o condiciones deben cumplirse para que la regla se active.. No es una parte estándar de Yara, pero se refiere a cómo se manejan las coincidencias, dependiendo del contexto en que se utilice la regla.</li>
+                    <li><marcador class="resaltado3">Outcome: </marcador>Establece el resultado o la salida de la regla cuando se activan las condiciones del match.</li>
                 </ol>
                 <p>Ejemplo de regla YARA:</p>
                 <div class="archivo">
@@ -542,7 +542,7 @@ condition:
                     <img src="media/response12.jpg" alt="">
                 </div>
                 <h6>Chroniclelab</h6>
-                <p>Para experimentar de primera mano las potentes capacidades de Chronicle, la revolucionaria plataforma de seguridad de Google, puedes acceder a una demostración preconfigurada que incluye reglas específicas, endpoints y herramientas diseñadas para optimizar la detección y respuesta ante amenazas. Esta demo permite a los usuarios explorar cómo Chronicle analiza grandes volúmenes de datos y utiliza inteligencia artificial para identificar patrones sospechosos, todo en un entorno intuitivo y fácil de usar. Si deseas descubrir cómo esta innovadora solución puede transformar tu estrategia de ciberseguridad, no dudes en visitar la página de demostración en <a href="https://goo.gle/chroniclelab" target="blank">Chronicle Demo</a> y sumérgete en el futuro de la seguridad digital.</p>
+                <p>Para experimentar de primera mano las potentes capacidades de Chronicle, la revolucionaria plataforma de seguridad de Google, puedes acceder a una demostración preconfigurada que incluye reglas específicas, endpoints y herramientas diseñadas para optimizar la detección y respuesta ante amenazas. Esta demo permite a los usuarios explorar cómo Chronicle analiza grandes volúmenes de datos y utiliza inteligencia artificial para identificar patrones sospechosos, todo en un entorno intuitivo y fácil de usar. Si deseas descubrir cómo esta innovadora solución puede transformar tu estrategia de ciberseguridad, no dudes en visitar la página de demostración en <a href="https://goo.gle/chroniclelab" target="blank">Chronicle Backstory</a> y sumérgete en el futuro de la seguridad digital.</p>
                 <div class="blog-image-grande">
                     <img src="media/response10.gif" alt="">
                 </div> 
